# PROIECT-POO-MAGAZIN-4---FINAL

./: CMakeLists.txt  main.cpp
include/: Client.h  Cos.h  Exceptions.h  History.h  IPriceStrategy.h  Imbracaminte.h  Incaltaminte.h  Laptop.h  Magazin.h  MarketSimulator.h  Phone.h  PriceStrategies.h  PricingEngine.h  Product.h  ProductCategory.h  ProductFactory.h  Produs.h  Racheta.h  Store.h  Tablet.h
src/: Client.cpp  Cos.cpp  Imbracaminte.cpp  Incaltaminte.cpp  Laptop.cpp  Magazin.cpp  MarketSimulator.cpp  Phone.cpp  PricingEngine.cpp  Product.cpp  ProductFactory.cpp  Produs.cpp  Racheta.cpp  Store.cpp  Tablet.cpp
